# OCR-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  DEVELOPMENT_GUIDE.md  Development & Quality Assuran.txt  Dockerfile  LICENSE  OPTIMIZATION_HISTORY.md  Product Requirements Document Han.txt  README.md  SECURITY.md  debug_accuracy.py  debug_bbox.py  debug_col.py  debug_ocr.py  debug_qty.py  docker-compose.yml  generate_test_receipts.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start_server.py  test_api_math.py  test_boxed_template.py  test_comprehensive.py  test_e2e_workflow.py  test_edge_cases.py  test_math_selfcontained.py  test_math_verify.py  test_ocr_accuracy.py  test_realworld_audit.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  db_postgres.py  error_tracking.py  json_logging.py  logging_config.py  main.py  metrics.py  middleware.py  observability.py  tracing.py  websocket.py
app/api/: routes.py
app/ocr/: azure_engine.py  engine.py  hybrid_engine.py  image_cache.py  parser.py  preprocessor.py  quality_scorer.py  total_verifier.py  usage_tracker.py  validators.py
app/services/: batch_service.py  correction_service.py  dedup_service.py  excel_service.py  product_service.py  receipt_service.py  tally_service.py
app/static/: app.js  index.html  styles.css
app/training/: __init__.py  benchmark.py  data_manager.py  optimizer.py  real_world_trainer.py  routes.py  template_learner.py
docs/: AI_Receipt_Generation_Prompts.md  CONTEXT.md  DEEP_AUDIT_REPORT.md  HYBRID_OCR_ARCHITECTURE.md  PERFORMANCE_AUDIT_REPORT.md  Receipt_Design_and_Scanning_Guide.md
monitoring/: alert_rules.yml  alertmanager.yml  loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: receipt-scanner.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: azure_performance.py  benchmark_now.py  check_azure_status.py  start_devtunnel.py  start_public.py  start_server.py  test_srirama_local.py  test_srirama_scan.py  train.py  trainer.py
scripts/dev/: benchmark_azure_vs_local.py  benchmark_pipeline.py  diag_edge.py  dump_ocr.py
scripts/generators/: create_test_receipt.py  generate_edge_case_receipts.py  generate_test_receipts.py
tests/: api_check.py  test_accuracy.py  test_api.py  test_app.py  test_azure_integration.py  test_codes.py  test_db_production.py  test_infrastructure.py  test_middleware_and_db.py  test_observability.py  test_parser_internals.py  test_preprocessing.py  test_services.py  test_smart_ocr.py  test_smart_ocr_edge_cases.py  test_trainer.py  test_training.py  verify_db.py
tests/e2e/: run_deep_test.py  test_all_flows.py  test_api_math.py  test_api_total.py  test_deep_audit.py  test_edge_cases.py  test_math_selfcontained.py  test_math_verify.py  test_new_samples.py  test_realworld_audit.py  test_sample_inputs.py
tests/fixtures/: srirama_scan_results.txt
tests/integration/: test_boxed_template.py  test_comprehensive.py  test_e2e_workflow.py  test_qty.py  test_qty2.py  test_total_verify.py
training_data/: labels_template.json
